--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
+    "add": "^2.0.6",
     "babel-loader": "^8.2.3",
     "concurrently": "^7.0.0",
     "css-loader": "^6.5.1",
@@ -26,17 +27,18 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
-    "webpack-dev-server": "^4.7.2"
+    "webpack-dev-server": "^4.7.2",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "webpack-cli": "^4.9.1"
   }
 }
-
