--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-github2": "^0.1.12",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
