--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.2.3",
     "concurrently": "^7.0.0",
     "css-loader": "^6.5.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
