--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "git-Employed",
+  "name": "gitEmployed",
   "version": "1",
   "main": "/index.js",
   "repository": "https://github.com/git-Employed/git-Employed.git",
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-github2": "^0.1.12",
+    "passport-oauth": "^1.0.0",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
