--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
 	"scripts": {
 		"start": "cross-env NODE_ENV=production node server/server.js",
 		"build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-		"dev": "cross-env NODE_ENV=development concurrently  \"nodemon server/server.js\" \"webpack-dev-server --open\""
+		"dev": "cross-env NODE_ENV=development concurrently  \"nodemon server/server.js\" \"webpack-dev-server --open\"",
+		"test": "jest --verbose"
 	},
 	"dependencies": {
 		"@babel/core": "^7.16.7",
-		"@babel/preset-env": "^7.16.7",
+		"@babel/preset-env": "^7.16.8",
 		"@babel/preset-react": "^7.16.7",
+		"babel-jest": "^27.4.6",
 		"babel-loader": "^8.2.3",
 		"concurrently": "^7.0.0",
 		"css-loader": "^6.5.1",
@@ -33,11 +35,13 @@
 		"redux-thunk": "^2.4.1",
 		"sass-loader": "^12.4.0",
 		"style-loader": "^3.3.1",
+		"ts-jest": "^27.1.3",
 		"webpack": "^5.65.0",
 		"webpack-dev-server": "^4.7.2"
 	},
 	"devDependencies": {
 		"cross-env": "^7.0.3",
+		"jest": "^27.4.7",
 		"webpack-cli": "^4.9.1"
 	}
 }
